container/kubex/apps/argocd/app-tiles/grafana/Ingress.for-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: for-argospace-grafana
  namespace: argospace-grafana
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  rules:
  - host: grafana.kubex
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana
            port: 
              number: 80
